--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
-        <link type="text/css" rel="stylesheet" href="style.css">
         <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         
@@ -38,6 +37,7 @@
             <img src="resources/images/dice-5.png" alt="Dice" class="dice">
         </div>
         
-        <script src="app.js"></script>
+        <script src="resources/js/pigGame.js"></script>
     </body>
+
 </html>
